--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>Rush & Mish</h4>
+                            <h4>Mish & Rush</h4>
                             <p class="text-muted">Founders</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/mish.and.rush.thebordercollies/" aria-label="Mish & Rush Instagram Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Mish & Rush Facebook Profile"><i class="fab fa-facebook-f"></i></a>
@@ -328,7 +328,7 @@
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/FSDistributors.png" alt="..." aria-label="FSDistributors Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.lionrollingcircus.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/LRC.png" alt="..." aria-label="LRC Logo" /></a>
+                        <a href="https://www.lionrollingcircus.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/LRC_logo_horizontal.svg" alt="..." aria-label="LRC Logo" /></a>
                     </div>
                 </div>
                 <div class="row align-items-center">
@@ -339,7 +339,7 @@
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/terrapeutic.png" alt="..." aria-label="terrapeutic Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://mobile.twitter.com/nftartpr"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/NFTartPR.jpeg" alt="..." aria-label="NFTArtPR Logo" /></a>
+                        <a href="https://www.nftartpr.net/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/NFTartPR.jpeg" alt="..." aria-label="NFTArtPR Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="https://www.instagram.com/yoshables/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/yoshables.png" alt="..." aria-label="Yoshables Logo" /></a>
@@ -350,10 +350,10 @@
                         <a href="https://cannacurepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Cannacure_Logo.svg" alt="..." aria-label="Cannacure Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.encasa.co/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/encasa.jpeg" alt="..." aria-label="Earth Gift Logo" /></a>
+                        <a href="https://www.encasa.co/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/encasa.jpeg" alt="..." aria-label="Encasa Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/NFTartPR.jpeg" alt="..." aria-label="yoshables Logo" /></a> -->
+                        <!-- <a href="https://caribbeangreenpr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/caribbeangreen_banner_2.png" alt="..." aria-label="Caribbean Green Logo" /></a> -->
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <!-- <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/almanys.jpeg" alt="..." aria-label="Encasa Logo" /></a> -->
