change almanys banner

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <a href="https://www.instagram.com/stonepuertorico/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/stone.svg" alt="..." aria-label="Stone Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://almanyssecurity.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/almanys.jpeg" alt="..." aria-label="Almanys Logo" /></a>
+                        <a href="https://almanyssecurity.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arlmanys_banner.png" alt="..." aria-label="Almanys Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="https://www.earthgiftpr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/earthgift.svg" alt="..." aria-label="Earth Gift Logo" /></a>
