added sponsers, navbar sytle changes, logo size change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/logo_pf.png" alt="Premios Florece" style="width: 80px; height: auto;" /></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/logo_pf.png" alt="Premios Florece" style="width: 60px; height: auto;" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -213,7 +213,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2021</h4>
-                                <h4 class="subheading">First fisical event</h4>
+                                <h4 class="subheading">First physical event</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">The second edition was held in person and the event was well received by the public.</p></div>
                         </div>
@@ -305,58 +305,72 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://caribbeangreenpr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/CaribbeanGreen2.svg" alt="..." aria-label="Caribbean Green Logo" /></a>
+                        <a href="https://caribbeangreenpr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/CaribbeanGreen2.svg" alt="Caribbean Green" aria-label="Caribbean Green Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.instagram.com/stonepuertorico/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/stone.svg" alt="..." aria-label="Stone Logo" /></a>
+                        <a href="https://www.instagram.com/stonepuertorico/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/stone.svg" alt="Stone Cannabis Boutique" aria-label="Stone Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://almanyssecurity.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arlmanys_banner.png" alt="..." aria-label="Almanys Logo" /></a>
+                        <a href="https://almanyssecurity.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arlmanys_banner.png" alt="Almany's Security" aria-label="Almanys Security Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.earthgiftpr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/earthgift.svg" alt="..." aria-label="Earth Gift Logo" /></a>
-                    </div>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Biocann.png" alt="..." aria-label="Biocann Logo" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.strainwisepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Strainwise.png" alt="..." aria-label="Strainwise Logo" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/FSDistributors.png" alt="..." aria-label="FSDistributors Logo" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.lionrollingcircus.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/LRC_logo_horizontal.svg" alt="..." aria-label="LRC Logo" /></a>
+                        <a href="https://www.earthgiftpr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/earthgift.svg" alt="Earth Gift" aria-label="Earth Gift Logo" /></a>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://steidellabs.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/steidel_2.jpg" alt="..." aria-label="Steidel Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Biocann.png" alt="Biocann" aria-label="Biocann Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/terrapeutic.png" alt="..." aria-label="terrapeutic Logo" /></a>
+                        <a href="https://www.strainwisepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Strainwise.png" alt="Strainwise" aria-label="Strainwise Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.nftartpr.net/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/NFTartPR.jpeg" alt="..." aria-label="NFTArtPR Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/FSDistributors.png" alt="FSDistributors" aria-label="FSDistributors Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.instagram.com/yoshables/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/yoshables.png" alt="..." aria-label="Yoshables Logo" /></a>
+                        <a href="https://www.lionrollingcircus.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/LRC_logo_horizontal.svg" alt="Liong Rolling Circus" aria-label="LRC Logo" /></a>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://cannacurepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Cannacure_Logo.svg" alt="..." aria-label="Cannacure Logo" /></a>
+                        <a href="https://steidellabs.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/steidel_2.jpg" alt="Steidel" aria-label="Steidel Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.encasa.co/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/encasa.jpeg" alt="..." aria-label="Encasa Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/terrapeutic.png" alt="terrapeutic" aria-label="terrapeutic Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="https://caribbeangreenpr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/caribbeangreen_banner_2.png" alt="..." aria-label="Caribbean Green Logo" /></a> -->
+                        <a href="https://www.nftartpr.net/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/NFTartPR.jpeg" alt="NFT Art PR" aria-label="NFTArtPR Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/almanys.jpeg" alt="..." aria-label="Encasa Logo" /></a> -->
+                        <a href="https://www.instagram.com/yoshables/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/yoshables.png" alt="Yoshables" aria-label="Yoshables Logo" /></a>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://cannacurepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Cannacure_Logo.svg" alt="Cannacure" aria-label="Cannacure Logo" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://www.encasa.co/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/encasa.jpeg" alt="Encasa Dispensary" aria-label="Encasa Logo" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://puertoricoalchemy.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/pralchemy.png" alt="Puerto Rico Alchemy" aria-label="PR Alchemy Logo" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://revistacronicas.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/cronicas.png" alt="Revista Cronicas" aria-label="Cronicas Logo" /></a>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <!-- <a href="https://cannacurepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Cannacure_Logo.svg" alt="Cannacure" aria-label="Cannacure Logo" /></a> -->
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <!-- <a href="https://www.encasa.co/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/encasa.jpeg" alt="Encasa Dispensary" aria-label="Encasa Logo" /></a> -->
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <!-- <a href="https://puertoricoalchemy.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/pralchemy.png" alt="Puerto Rico Alchemy" aria-label="PR Alchemy Logo" /></a> -->
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <!-- <a href="https://revistacronicas.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/cronicas.png" alt="Revista Cronicas" aria-label="Cronicas Logo" /></a> -->
                     </div>
                 </div>
             </div>
