added boutik to sponsors

--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Biocann.png" alt="Biocann" aria-label="Biocann Logo" /></a>
+                        <a href="https://somosbiocann.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Biocann.png" alt="Biocann" aria-label="Biocann Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="https://www.strainwisepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Strainwise.png" alt="Strainwise" aria-label="Strainwise Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/FSDistributors.png" alt="FSDistributors" aria-label="FSDistributors Logo" /></a>
+                        <a href="https://www.instagram.com/fs_distributors/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/FSDistributors.png" alt="FSDistributors" aria-label="FSDistributors Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="https://www.lionrollingcircus.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/LRC_logo_horizontal.svg" alt="Liong Rolling Circus" aria-label="LRC Logo" /></a>
@@ -336,7 +336,7 @@
                         <a href="https://steidellabs.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/steidel_2.jpg" alt="Steidel" aria-label="Steidel Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/terrapeutic.png" alt="terrapeutic" aria-label="terrapeutic Logo" /></a>
+                        <a href="https://somosbiocann.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/terrapeutic.png" alt="terrapeutic" aria-label="terrapeutic Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="https://www.nftartpr.net/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/NFTartPR.jpeg" alt="NFT Art PR" aria-label="NFTArtPR Logo" /></a>
@@ -361,10 +361,10 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="https://cannacurepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Cannacure_Logo.svg" alt="Cannacure" aria-label="Cannacure Logo" /></a> -->
+                        <a href="https://linktr.ee/BOUTIKPR"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/boutikpr.webp" alt="Boutik Dispensary" aria-label="BOUTIKPR Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="https://www.encasa.co/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/encasa.jpeg" alt="Encasa Dispensary" aria-label="Encasa Logo" /></a> -->
+                        <!-- <a href="https://cannacurepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Cannacure_Logo.svg" alt="Cannacure" aria-label="Cannacure Logo" /></a> -->
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <!-- <a href="https://puertoricoalchemy.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/pralchemy.png" alt="Puerto Rico Alchemy" aria-label="PR Alchemy Logo" /></a> -->
