--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="padding-top: .5rem;padding-bottom: .5rem;">
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="assets/img/logo_pf.png" alt="Premios Florece" style="width: 60px; height: auto;" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="btn btn-success btn-lg text-uppercase" href="survey.html">Vote</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +42,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Your Awards!</div>
                 <div class="masthead-heading text-uppercase">Premios Florece</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="survey.html">Vote</a>
+                <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a>
             </div>
         </header>
         <!-- Services-->
@@ -55,11 +56,11 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-calendar-plus fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Event</h4>
                         <p class="text-muted">Reserve your ticket to the event.</p>
-                        <a class="btn btn-secondary btn-xl text-uppercase" href="https://www.eventbrite.com/e/premios-florece-3era-edicion-tickets-304387429997">Reserve</a>
+                        <a class="btn btn-danger btn-xl text-uppercase" href="https://www.eventbrite.com/e/premios-florece-3era-edicion-tickets-304387429997">Reserve</a>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
@@ -68,7 +69,7 @@
                         </span>
                         <h4 class="my-3">Survey</h4>
                         <p class="text-muted">Vote for your favorites.</p>
-                        <a class="btn btn-secondary btn-xl text-uppercase" href="survey.html">Vote</a>
+                        <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
