--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <a href="https://linktr.ee/BOUTIKPR"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/boutikpr.webp" alt="Boutik Dispensary" aria-label="BOUTIKPR Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="https://cannacurepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/Cannacure_Logo.svg" alt="Cannacure" aria-label="Cannacure Logo" /></a> -->
+                        <a href="https://www.instagram.com/thepurplewaypr/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/purpledoor.jpg" alt="Purple Door" aria-label="Purpledoor Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <!-- <a href="https://puertoricoalchemy.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/pralchemy.png" alt="Puerto Rico Alchemy" aria-label="PR Alchemy Logo" /></a> -->
