remove vote, add melaza, glasslab, best buds

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                        <li class="nav-item"><a class="btn btn-success btn-lg text-uppercase" href="survey.html">Vote</a></li>
+                        <!-- <li class="nav-item"><a class="btn btn-success btn-lg text-uppercase" href="survey.html">Vote</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -42,7 +42,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Your Awards!</div>
                 <div class="masthead-heading text-uppercase">Premios Florece</div>
-                <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a>
+                <!-- <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a> -->
             </div>
         </header>
         <!-- Services-->
@@ -69,7 +69,7 @@
                         </span>
                         <h4 class="my-3">Survey</h4>
                         <p class="text-muted">Vote for your favorites.</p>
-                        <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a>
+                        <!-- <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a> -->
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
@@ -240,7 +240,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <a class="timeline-image" href="survey.html">
+                        <!-- <a class="timeline-image" href="survey.html"> -->
                             <h4>
                                 Be Part
                                 <br />
@@ -368,10 +368,24 @@
                         <a href="https://www.instagram.com/thepurplewaypr/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/purpledoor.jpg" alt="Purple Door" aria-label="Purpledoor Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="https://puertoricoalchemy.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/pralchemy.png" alt="Puerto Rico Alchemy" aria-label="PR Alchemy Logo" /></a> -->
+                        <a href="https://www.instagram.com/melazasmokeshop/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/melaza_white.jpg" alt="Melaza Smokeshop" aria-label="Melaza Snokeshop Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="https://revistacronicas.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/cronicas.png" alt="Revista Cronicas" aria-label="Cronicas Logo" /></a> -->
+                        <a href="https://www.instagram.com/glasslab_pr"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/glasslab.png" alt="Glasslab PR" aria-label="Glasslab PRLogo" /></a>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://bestbudspr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/bestbuds.png" alt="BestBuds Dispensary" aria-label="BestBuds Logo" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <!-- <a href="https://www.instagram.com/thepurplewaypr/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/purpledoor.jpg" alt="Purple Door" aria-label="Purpledoor Logo" /></a> -->
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <!-- <a href="https://www.instagram.com/melazasmokeshop/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/pralchemy.png" alt="Melaza Smokeshop" aria-label="Melaza Snokeshop Logo" /></a> -->
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <!-- <a href="https://www.instagram.com/glasslab_pr"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/cronicas.png" alt="Glasslab PR" aria-label="Glasslab PRLogo" /></a> -->
                     </div>
                 </div>
             </div>
