added 24marketplace logo

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <a href="https://bestbudspr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/bestbuds.png" alt="BestBuds Dispensary" aria-label="BestBuds Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <!-- <a href="https://www.instagram.com/thepurplewaypr/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/purpledoor.jpg" alt="Purple Door" aria-label="Purpledoor Logo" /></a> -->
+                        <a href="https://www.24marketplacepr.com/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/24marketplace.webp" alt="24MarketplacePR" aria-label="24MarketplacePR Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <!-- <a href="https://www.instagram.com/melazasmokeshop/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/pralchemy.png" alt="Melaza Smokeshop" aria-label="Melaza Snokeshop Logo" /></a> -->
