changed voting to closed icon to locked

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Survey</h4>
-                        <p class="text-muted">Vote for your favorites.</p>
+                        <p class="text-muted">Voting closed.</p>
                         <!-- <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a> -->
                     </div>
                     <div class="col-md-3">
