added url to be part of us button

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <!-- <a class="timeline-image" href="survey.html"> -->
+                        <a class="timeline-image" href="https://www.instagram.com/premiosflorece/">
                             <h4>
                                 Be Part
                                 <br />
