--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="btn btn-primary btn-lg text-uppercase" href="https://www.paypal.com/pools/c/8J2iN0YqjA">Donate</a></li>
                         <!-- <li class="nav-item"><a class="btn btn-success btn-lg text-uppercase" href="survey.html">Vote</a></li> -->
                     </ul>
                 </div>
@@ -42,6 +43,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Your Awards!</div>
                 <div class="masthead-heading text-uppercase">Premios Florece</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/pools/c/8J2iN0YqjA">Donate</a>
                 <!-- <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a> -->
             </div>
         </header>
@@ -65,6 +67,23 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-hand-holding-medical fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Donate</h4>
+                        <p class="text-muted">Keep the party going!</p>
+                        <form action="https://www.paypal.com/donate" method="post" target="_top">
+                            <input type="hidden" name="business" value="XHRWBQ8DA58XY" />
+                            <input type="hidden" name="no_recurring" value="0" />
+                            <input type="hidden" name="item_name" value="Premios Florece 2022. Non-Profit Organization dedicated to Awards, Education & Information on the cannabis industry in PR." />
+                            <input type="hidden" name="currency_code" value="USD" />
+                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                        </form>
+                        <!-- <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/pools/c/8J2iN0YqjA">Donate</a> -->
+                    </div>
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Survey</h4>
@@ -79,14 +98,14 @@
                         <h4 class="my-3">Seminars</h4>
                         <p class="text-muted">Learn more about the industry.</p>
                     </div>
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Publications</h4>
                         <p class="text-muted">Read our newsleter to stay up to date.</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
