--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                        <li class="nav-item"><a class="btn btn-primary btn-lg text-uppercase" href="https://www.paypal.com/pools/c/8J2iN0YqjA">Donate</a></li>
-                        <!-- <li class="nav-item"><a class="btn btn-success btn-lg text-uppercase" href="survey.html">Vote</a></li> -->
+                        <li class="nav-item"><a class="btn btn-primary btn-lg text-uppercase" href="https://www.paypal.com/donate/?business=XHRWBQ8DA58XY&no_recurring=0&item_name=Premios+Florece+2022.+Non-Profit+Organization+dedicated+to+Awards,+Education+&+Information+on+the+cannabis+industry+in+PR.&currency_code=USD">Donate</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,9 +41,9 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">Welcome To Your Awards!</div>
+                <div class="masthead-subheading">Voting for 2022 prizes has finished.</div>
                 <div class="masthead-heading text-uppercase">Premios Florece</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/pools/c/8J2iN0YqjA">Donate</a>
-                <!-- <a class="btn btn-success btn-xl text-uppercase" href="survey.html">Vote</a> -->
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/donate/?business=XHRWBQ8DA58XY&no_recurring=0&item_name=Premios+Florece+2022.+Non-Profit+Organization+dedicated+to+Awards,+Education+&+Information+on+the+cannabis+industry+in+PR.&currency_code=USD.html">Donate</a>
             </div>
         </header>
         <!-- Services-->
@@ -71,15 +70,7 @@
                         </span>
                         <h4 class="my-3">Donate</h4>
                         <p class="text-muted">Keep the party going!</p>
-                        <form action="https://www.paypal.com/donate" method="post" target="_top">
-                            <input type="hidden" name="business" value="XHRWBQ8DA58XY" />
-                            <input type="hidden" name="no_recurring" value="0" />
-                            <input type="hidden" name="item_name" value="Premios Florece 2022. Non-Profit Organization dedicated to Awards, Education & Information on the cannabis industry in PR." />
-                            <input type="hidden" name="currency_code" value="USD" />
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
-                        </form>
-                        <!-- <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/pools/c/8J2iN0YqjA">Donate</a> -->
+                        <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/donate/?business=XHRWBQ8DA58XY&no_recurring=0&item_name=Premios+Florece+2022.+Non-Profit+Organization+dedicated+to+Awards%2C+Education+%26+Information+on+the+cannabis+industry+in+PR.&currency_code=USD">Donate</a>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
