--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="masthead-subheading">Welcome To Your Awards!</div>
                 <div class="masthead-subheading">Voting for 2022 prizes has finished.</div>
                 <div class="masthead-heading text-uppercase">Premios Florece</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/donate/?business=XHRWBQ8DA58XY&no_recurring=0&item_name=Premios+Florece+2022.+Non-Profit+Organization+dedicated+to+Awards,+Education+&+Information+on+the+cannabis+industry+in+PR.&currency_code=USD.html">Donate</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/donate/?business=XHRWBQ8DA58XY&no_recurring=0&item_name=Premios+Florece+2022.+Non-Profit+Organization+dedicated+to+Awards,+Education+&+Information+on+the+cannabis+industry+in+PR.&currency_code=USD">Donate</a>
             </div>
         </header>
         <!-- Services-->
