add fundraiser, fix url

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-hand-holding-medical fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Donate</h4>
+                        <h4 class="my-3">Fundraiser</h4>
                         <p class="text-muted">Keep the party going!</p>
-                        <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/donate/?business=XHRWBQ8DA58XY&no_recurring=0&item_name=Premios+Florece+2022.+Non-Profit+Organization+dedicated+to+Awards%2C+Education+%26+Information+on+the+cannabis+industry+in+PR.&currency_code=USD">Donate</a>
+                        <a class="btn btn-primary btn-xl text-uppercase" href="https://www.paypal.com/pools/c/8J2iN0YqjA">Donate</a>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
